# ceres-backproject

./: CMakeLists.txt  README.md  ceresBackProject.cpp  run.sh  visualize.cpp
data/: process.ipynb
